@@ -1,7 +1,6 @@
 package br.com.sourcesystems.process;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.bson.Document;
 
@@ -11,14 +10,17 @@ import com.mongodb.client.MongoCollection;
 import br.com.sourcesystems.model.Registro;
 import jakarta.batch.api.chunk.AbstractItemWriter;
 import jakarta.enterprise.context.Dependent;
-import jakarta.inject.Inject;
 import jakarta.inject.Named;
 
 @Dependent
 @Named("MongoWriter")
 public class MongoWriter extends AbstractItemWriter {
-    @Inject
+
     MongoClient mongoClient;
+
+    public MongoWriter(MongoClient mongoClient) {
+        this.mongoClient = mongoClient;
+    }
 
     @Override
     public void writeItems(List<Object> items) {
@@ -26,12 +28,12 @@ public class MongoWriter extends AbstractItemWriter {
         List<Document> docs = items.stream()
             .map(item -> {
                 Registro r = (Registro) item;
-                return new Document("nome", r.nome)
-                           .append("email", r.email)
-                           .append("telefone", r.telefone)
-                           .append("cpf", r.cpf)
-                           .append("dataLeitura", r.dataLeitura);
-            }).collect(Collectors.toList());
+                return new Document("nome", r.getNome())
+                           .append("email", r.getEmail())
+                           .append("telefone", r.getTelefone())
+                           .append("cpf", r.getCpf())
+                           .append("dataLeitura", r.getDataLeitura());
+            }).toList();
         collection.insertMany(docs);
     }
 }
